style.css
/* ... */
#respond .comment-form-author {
  float: left;
  width: 33.3333333%;
  padding-right: 1em;
  z-index: 1;
}
#respond .comment-form-email {
  float: left;
  width: 33.3333333%;
  padding-right: 0.5em;
  padding-left: 0.5em;
  z-index: 1;
}
#respond .comment-form-email .required {
  right: 3px;
}
#respond .comment-form-url {
  float: left;
  width: 33.3333333%;
  padding-left: 1em;
  z-index: 1;
}
#respond .comment-form-comment {
  clear: left;
}
#respond .comment-submit-wrapper {
  margin: 0;
  text-align: right;
}
#respond .user-login p {
  position: relative;
}
#respond .form-submit {
  float: right;
  margin-bottom: 0;
}
#respond .form-submit input {
  cursor: pointer;
  display: inline-block;
  padding: 1em;
  background: #47aede;
  border: 0;
  border-radius: 2px;
  box-shadow: none;
  color: #FFF;
  font-family: 'Varela Round', sans-serif;
  text-transform: uppercase;
  font-weight: 400;
  -webkit-transition: box-shadow 100ms linear, border-color 100ms linear;
  -moz-transition: box-shadow 100ms linear, border-color 100ms linear;
  -o-transition: box-shadow 100ms linear, border-color 100ms linear;
  transition: box-shadow 100ms linear, border-color 100ms linear;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
}
#respond .form-submit input:hover,
#respond .form-submit input:focus,
#respond .form-submit input:active {
  background: #47aede;
  box-shadow: 0 0 0 3px #47aede;
  color: #FFF;
}
#respond .form-submit input-full {
  width: 100%;
  text-align: center;
}
#respond .form-submit input-disabled {
  background: #b9b9b9;
}
#respond .form-submit input-disabled:hover,
#respond .form-submit input-disabled:focus,
#respond .form-submit input-disabled:active {
  background: #b9b9b9;
  box-shadow: 0 0 0 3px #b9b9b9;
}
#respond .form-submit input-secondary {
  background: #99cc99;
}
#respond .form-submit input-secondary:hover,
#respond .form-submit input-secondary:focus,
#respond .form-submit input-secondary:active {
  background: #99cc99;
  box-shadow: 0 0 0 3px #99cc99;
}
#respond .form-submit input-blue {
  background: #6699cc;
}
#respond .form-submit input-blue:hover,
#respond .form-submit input-blue:focus,
#respond .form-submit input-blue:active {
  background: #6699cc;
  box-shadow: 0 0 0 3px #6699cc;
}
#respond .form-submit input-green {
  background: #99cc99;
}
#respond .form-submit input-green:hover,
#respond .form-submit input-green:focus,
#respond .form-submit input-green:active {
  background: #99cc99;
  box-shadow: 0 0 0 3px #99cc99;
}
#disqus_thread {
  width: 100%;
  max-width: 760px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 3em;
  margin-bottom: 3em;
}
@media screen and (max-width: 760px) {
  #disqus_thread {
    padding-left: 3em;
    padding-right: 3em;
  }
}
/** ----------------------------------------:[ Jetpack Portfolio ]:--- */
#portfolio-wrapper:before,
#portfolio-wrapper:after {
  content: " ";
  display: table;
  line-height: 0;
}
#portfolio-wrapper:after {
  clear: both;
}
#portfolio-wrapper .jetpack-portfolio {
  padding: 0;
  border-bottom: 0;
}
#portfolio-wrapper .jetpack-portfolio img {
  border-radius: 0;
  display: block;
}
#portfolio-wrapper .jetpack-portfolio .project-details {
  position: relative;
  width: 100%;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  background: #2d2d2d;
}
#portfolio-wrapper .jetpack-portfolio .project-details:hover .project-image {
  opacity: 1;
}
#portfolio-wrapper .jetpack-portfolio .project-image {
  opacity: .2;
  -webkit-transition: opacity 200ms linear;
  -moz-transition: opacity 200ms linear;
  -o-transition: opacity 200ms linear;
  transition: opacity 200ms linear;
}
#portfolio-wrapper .jetpack-portfolio .project-entry-meta {
  font-size: .75em;
  color: #b9b9b9;
}
#portfolio-wrapper .jetpack-portfolio .project-entry-meta a {
  color: #b9b9b9;
}
#portfolio-wrapper .jetpack-portfolio .project-entry-meta a:hover {
  color: #FFF;
}
#portfolio-wrapper .jetpack-portfolio .project-title {
  font-size: 1.8em;
  margin-top: 20%;
  margin-bottom: .5em;
}
#portfolio-wrapper .jetpack-portfolio .project-title a {
  color: #FFF;
}
#portfolio-wrapper .jetpack-portfolio .project-title a:hover {
  border-bottom: 1px solid #FFF;
}
#portfolio-wrapper .jetpack-portfolio .project-summary {
  position: absolute;
  top: 1em;
  left: 1em;
  right: 1em;
  text-align: center;
}
@media screen and (min-width: 500px) and (max-width: 1000px) {
  #portfolio-wrapper .jetpack-portfolio {
    float: left;
    width: 50%;
  }
  #portfolio-wrapper .jetpack-portfolio:nth-child( 2n+1 ) {
    clear: left;
  }
}
@media screen and (min-width: 1000px) and (max-width: 1500px) {
  #portfolio-wrapper .jetpack-portfolio {
    float: left;
    width: 33.3333333%;
  }
  #portfolio-wrapper .jetpack-portfolio:nth-child( 3n+1 ) {
    clear: left;
  }
}
@media screen and (min-width: 1500px) and (max-width: 2000px) {
  #portfolio-wrapper .jetpack-portfolio {
    float: left;
    width: 25%;
  }
  #portfolio-wrapper .jetpack-portfolio:nth-child( 4n+1 ) {
    clear: left;
  }
}
@media screen and (min-width: 2000px) {
  #portfolio-wrapper .jetpack-portfolio {
    float: left;
    width: 16.6666667%;
  }
  #portfolio-wrapper .jetpack-portfolio:nth-child( 6n+1 ) {
    clear: left;
  }
}
.page-template-portfolio-php .entry-content > *:last-child {
  margin-bottom: 0;
}
.page-template-portfolio-php .paging-navigation {
  text-align: center;
}
/*--------------------------------------------------------------
11.0 Infinite scroll
--------------------------------------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .paging-navigation,
.infinite-scroll.neverending .site-footer {
  display: none;
}
/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
.infinity-end.neverending .site-footer {
  display: block;
}
/* ... */

